fixed bib alignment

--- a/archive/laika/css/style.css
+++ b/archive/laika/css/style.css
@@ -23,7 +23,7 @@ body {
 
 .sidenav a, .sidebib a {
   z-index:2;
-  padding: 8px 8px 8px 32px;
+  padding: 8px 8px 8px 30px;
   text-decoration: none;
   font-size: 25px;
   color: grey;
@@ -31,7 +31,9 @@ body {
   }
 
 .sidebib a {
+  text-align:right;
   font-size:20px;
+  padding: 8px 30px 8px 8px;
 }
 
 .sidenav a:hover, .sidebib a:hover, .player:hover, .openbtn:hover, .closebtn:hover {
